crates/keron-lang/tests/corpus/errors/check/merge_rejects_mismatched_value_types.keron
# `merge(a, b)` is generic in `K`, `V` — `a` binds the variables, and
# `b` must match. A `Map<String, String>` overlaid with a
# `Map<String, Int>` is a type error rather than a silent widening.
val a: Map<String, String> = {"k": "v"}

val b: Map<String, Int> = {"k": 1}

val m: Map<String, String> = merge(a, b)
